# gst-player

./: .gitignore  Makefile.am  README.md  autogen.sh  check.mk  configure.ac  gst.supp  gtk-doc.make
["ios", "GstPlay"]/: gst_ios_init.h
android/: .gitignore  Makefile.am  README.md
android/app/: .gitignore  build.gradle
android/app/src/main/java/org/freedesktop/gstreamer/play/: VideoSelector.java
android/app/src/main/jni/: Android.mk  Application.mk  player.c
android/jni/: player.c
docs/: Makefile.am
docs/lib/: Makefile.am  gst-player-docs.xml  gst-player-sections.txt  gst-player.types
gst-play/: gst-play.c
gtk/: gtk-play.c  gtk-video-renderer.c
ios/GstPlay/: gst_ios_init.h
lib/: gstplayer.c
lib/gst/: Makefile.am
lib/gst/player/: Makefile.am  gstplayer-audio-stream-info.c  gstplayer-audio-stream-info.h  gstplayer-g-main-context-signal-dispatcher.c  gstplayer-media-info-private.h  gstplayer-media-info.c  gstplayer-media-info.h  gstplayer-signal-dispatcher-private.h  gstplayer-signal-dispatcher.c  gstplayer-signal-dispatcher.h  gstplayer-text-stream-info.c  gstplayer-text-stream-info.h  gstplayer-video-overlay-video-renderer.c  gstplayer-video-renderer.c  gstplayer-video-stream-info.c  gstplayer-video-stream-info.h  gstplayer-visualization.c  gstplayer.c  gstplayer.h  player-media-info.h  player.h
pkgconfig/: Makefile.am  gstreamer-player-uninstalled.pc.in  gstreamer-player.pc.in
qt/: imagesample.cpp  imagesample.h  main.cpp  main.qml  quickrenderer.cpp
tests/: Makefile.am  player.c
tests/media/: test_sub.srt
win32/: gst-player.sln
win32/gst-play/: gst-play.vcxproj  gst-play.vcxproj.filters
win32/gst-player/: gst-player.sln
win32/gst-player/gst-player/: gst-player.vcxproj  gst-player.vcxproj.filters
win32/gst-player/player/: player.vcxproj  player.vcxproj.filters
win32/libgstplayer/: libgstplayer.vcxproj  libgstplayer.vcxproj.filters
